beautifying the pages

--- a/docs_dev/prototyping.ipynb
+++ b/docs_dev/prototyping.ipynb
@@ -164,11 +164,73 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test to HTML"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import markdown\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# Read the Markdown file\n",
+    "with open('index.md', 'r') as file:\n",
+    "    markdown_text = file.read()\n",
+    "\n",
+    "# Convert Markdown to HTML\n",
+    "html = markdown.markdown(markdown_text)\n",
+    "\n",
+    "# Create a BeautifulSoup object\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['h1',\n",
+       " None,\n",
+       " 'p',\n",
+       " None,\n",
+       " 'p',\n",
+       " None,\n",
+       " 'p',\n",
+       " None,\n",
+       " 'p',\n",
+       " None,\n",
+       " 'p',\n",
+       " None,\n",
+       " 'p',\n",
+       " None,\n",
+       " 'h2',\n",
+       " None,\n",
+       " 'p',\n",
+       " None,\n",
+       " 'h3',\n",
+       " None,\n",
+       " 'ul']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[tag.name for tag in soup.contents]"
+   ]
   }
  ],
  "metadata": {
