--- a/sphinx/example_linked_data_timeseries_battery_data.ipynb
+++ b/sphinx/example_linked_data_timeseries_battery_data.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\\# Example: Timeseries Battery Data\n",
+        "# Example: Timeseries Battery Data\n",
         "\n",
         "Let's describe a csv file containing some timeseries battery data and then anaylze it using the ontology!\n",
         "\n",
