deploy: 1faede549ddd6535c0641a78eea6237f15a5f67d

--- a/example_linked_data_timeseries_battery_data.ipynb
+++ b/example_linked_data_timeseries_battery_data.ipynb
@@ -6,7 +6,7 @@
     "id": "1wseTQGaB4x9"
    },
    "source": [
-    "\\# Example: Timeseries Battery Data\n",
+    "# Example: Timeseries Battery Data\n",
     "\n",
     "Let's describe a csv file containing some timeseries battery data and then anaylze it using the ontology!\n",
     "\n",
