Update docs to remove all build warnings
All warnings have been removed by:
- Move `!pip install` statements to a separate cell in all notebooks,
  making the cell "shellscript" code and add a sentence immediately
  before stating the same thing.
- Add all files to a Sphinx `toctree` tag, specifically extending the
  header nav with the "More" dropdown, which includes "contribute",
  "tools", and "resources".
- Find online and add the image for the Protégé configuration.

Update the configuration to remove the primary sidebar from pages that
have no section navigation.

Since no warnings are produced (locally) now, the CI workflow has been
updated to include the `-W` flag for sphinx-build, which treats warnings
as errors during the build.

--- a/sphinx/example_linked_data_custom_battery_cell_metadata.ipynb
+++ b/sphinx/example_linked_data_custom_battery_cell_metadata.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "1wseTQGaB4x9"
+      },
       "source": [
         "# Example: Custom Battery Cell Metadata\n",
         "\n",
@@ -29,23 +18,25 @@
         "- How to use the ontology to fetch more information from other sources **[Advanced]**  \n",
         "\n",
         "A live version of this notebook is available on Google Colab [here](https://colab.research.google.com/drive/1k3dGZTz4bDeH4JPToqXsN0svCUkswPDN?usp=sharing)\n"
-      ],
-      "metadata": {
-        "id": "1wseTQGaB4x9"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "jcTVz9-DEh3m"
+      },
       "source": [
         "## Describe the powder using ontology terms in JSON-LD format\n",
         "The JSON-LD data that we will use is:"
-      ],
-      "metadata": {
-        "id": "jcTVz9-DEh3m"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {
+        "id": "gohQKEBrF2QP"
+      },
+      "outputs": [],
       "source": [
         "jsonld_LFPGr = {\n",
         "            \"@context\": \"https://raw.githubusercontent.com/emmo-repo/domain-battery/master/context.json\",\n",
@@ -112,78 +103,62 @@
         "               \"hasMeasurementUnit\": \"emmo:Volt\"\n",
         "            }\n",
         "         }"
-      ],
-      "metadata": {
-        "id": "gohQKEBrF2QP"
-      },
-      "execution_count": 48,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "in30p-x4H91Y"
+      },
       "source": [
         "## Parse this description into a graph\n",
         "Now let's see how a machine would process this data by reading it into a Graph!\n",
         "\n",
-        "First, we install and import the python dependencies that we need for this example."
-      ],
-      "metadata": {
-        "id": "in30p-x4H91Y"
-      }
+        "First, we install and import the python dependencies that we need for this example.\n",
+        "\n",
+        "Note, the `pip install` statement is to be run in a shell/terminal."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "shellscript"
+        }
+      },
+      "outputs": [],
       "source": [
-        "# Install and import dependencies\n",
-        "!pip install jsonschema rdflib requests matplotlib > /dev/null\n",
-        "\n",
-        "import json\n",
-        "import rdflib\n",
-        "import requests\n",
-        "import sys\n",
-        "from IPython.display import Image, display\n",
-        "import matplotlib.pyplot as plt"
-      ],
+        "# Install dependencies\n",
+        "pip install jsonschema rdflib requests matplotlib > /dev/null"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 49,
       "metadata": {
         "id": "wk4sFl_eA2ML"
       },
-      "execution_count": 49,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Import dependencies\n",
+        "import json\n",
+        "import rdflib\n",
+        "import requests"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "We create the graph using a very handy python package called [rdflib](https://rdflib.readthedocs.io/en/stable/), which provides us a way to parse our json-ld data, run some queries using the language [SPARQL](https://en.wikipedia.org/wiki/SPARQL), and serialize the graph in any RDF compatible format (e.g. JSON-LD, Turtle, etc.)."
-      ],
       "metadata": {
         "id": "lotp-0QABV-2"
-      }
+      },
+      "source": [
+        "We create the graph using a very handy python package called [rdflib](https://rdflib.readthedocs.io/en/stable/), which provides us a way to parse our json-ld data, run some queries using the language [SPARQL](https://en.wikipedia.org/wiki/SPARQL), and serialize the graph in any RDF compatible format (e.g. JSON-LD, Turtle, etc.)."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Create a new graph\n",
-        "g = rdflib.Graph()\n",
-        "\n",
-        "# Parse our json-ld data into the graph\n",
-        "g.parse(data=json.dumps(jsonld_LFPGr), format=\"json-ld\")\n",
-        "g.parse(data=json.dumps(jsonld_LNOGr), format=\"json-ld\")\n",
-        "\n",
-        "# Create a SPARQL query to return all the triples in the graph\n",
-        "query_all = \"\"\"\n",
-        "SELECT ?subject ?predicate ?object\n",
-        "WHERE {\n",
-        "  ?subject ?predicate ?object\n",
-        "}\n",
-        "\"\"\"\n",
-        "\n",
-        "# Execute the SPARQL query\n",
-        "all_the_things = g.query(query_all)\n",
-        "\n",
-        "# Print the results\n",
-        "for row in all_the_things:\n",
-        "    print(row)\n"
-      ],
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -191,11 +166,10 @@
         "id": "zWibLw6NIrrq",
         "outputId": "785ba3d8-9dbc-4b89-df62-931c96bb8216"
       },
-      "execution_count": 50,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "(rdflib.term.BNode('N1fa58317b5c04a40bdc836b0e29a051d'), rdflib.term.URIRef('https://schema.org/name'), rdflib.term.Literal('My LFP-Graphite R2032 Coin Cell'))\n",
             "(rdflib.term.BNode('Na8888f67843f40fa8bc9efe32a39bd02'), rdflib.term.URIRef('http://emmo.info/electrochemistry#electrochemistry_860aa941_5ff9_4452_8a16_7856fad07bee'), rdflib.term.BNode('N1fe8535096ed436e92cc736bb203262f'))\n",
@@ -240,23 +214,63 @@
             "(rdflib.term.BNode('N1fa58317b5c04a40bdc836b0e29a051d'), rdflib.term.URIRef('http://emmo.info/electrochemistry#electrochemistry_5d299271_3f68_494f_ab96_3db9acdd3138'), rdflib.term.BNode('N318dda34a11b4390946ce22a6278c83c'))\n"
           ]
         }
+      ],
+      "source": [
+        "# Create a new graph\n",
+        "g = rdflib.Graph()\n",
+        "\n",
+        "# Parse our json-ld data into the graph\n",
+        "g.parse(data=json.dumps(jsonld_LFPGr), format=\"json-ld\")\n",
+        "g.parse(data=json.dumps(jsonld_LNOGr), format=\"json-ld\")\n",
+        "\n",
+        "# Create a SPARQL query to return all the triples in the graph\n",
+        "query_all = \"\"\"\n",
+        "SELECT ?subject ?predicate ?object\n",
+        "WHERE {\n",
+        "  ?subject ?predicate ?object\n",
+        "}\n",
+        "\"\"\"\n",
+        "\n",
+        "# Execute the SPARQL query\n",
+        "all_the_things = g.query(query_all)\n",
+        "\n",
+        "# Print the results\n",
+        "for row in all_the_things:\n",
+        "    print(row)\n"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "C-w1TbxkI4W5"
+      },
       "source": [
         "You can see that our human-readable JSON-LD file has been transformed into some nasty looking (but machine-readable!) triples.\n",
         "\n",
         "## Query the Graph to select instances with certain properties [Advanced]\n",
         "\n",
         "Now, let's write a SPARQL query to return the names of cells that have a nominal voltage greater than 3.5 V?"
-      ],
-      "metadata": {
-        "id": "C-w1TbxkI4W5"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 51,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6bXHGG4cI-kr",
+        "outputId": "d74c6a2b-9dc7-4c7f-b5b2-7db4643f310d"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(rdflib.term.Literal('My LNO-Graphite R2032 Coin Cell'),)\n"
+          ]
+        }
+      ],
       "source": [
         "# Fetch the context\n",
         "context_url = 'https://raw.githubusercontent.com/emmo-repo/domain-battery/master/context.json'\n",
@@ -295,38 +309,38 @@
         "# Print the results\n",
         "for row in results:\n",
         "    print(row)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6bXHGG4cI-kr",
-        "outputId": "d74c6a2b-9dc7-4c7f-b5b2-7db4643f310d"
-      },
-      "execution_count": 51,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(rdflib.term.Literal('My LNO-Graphite R2032 Coin Cell'),)\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "b7LJC8BubFce"
+      },
       "source": [
         "## Fetch additional information from other sources [Advanced]\n",
         "\n",
         "Ontologies contain a lot of information about the meaning of things, but they don't always contain an exhaustive list of all the properties. Instead, they often point to other sources where that information exists rather than duplicating it. Let's see how you can use the ontology to fetch additional information from other sources."
-      ],
-      "metadata": {
-        "id": "b7LJC8BubFce"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 52,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ntT1Rf_yM6sZ",
+        "outputId": "8945b2dc-8573-4d8e-e1b7-a0d2709569e5"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The PubChem ID of Lithiun Nickel Oxide is: Q81988484\n"
+          ]
+        }
+      ],
       "source": [
         "# Parse the ontology into the knowledge graph\n",
         "ontology = \"https://raw.githubusercontent.com/emmo-repo/domain-electrochemistry/master/electrochemistry-inferred.ttl\"\n",
@@ -354,36 +368,36 @@
         "    wikidata_id = row.wikidataId.split('/')[-1]\n",
         "\n",
         "print(f\"The PubChem ID of Lithiun Nickel Oxide is: {wikidata_id}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ntT1Rf_yM6sZ",
-        "outputId": "8945b2dc-8573-4d8e-e1b7-a0d2709569e5"
-      },
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The PubChem ID of Lithiun Nickel Oxide is: Q81988484\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Finally, let's retireve more information about Lithium Nickel Oxide from Wikidata and PubChem"
-      ],
       "metadata": {
         "id": "mRcFo-MBDVBW"
-      }
+      },
+      "source": [
+        "Finally, let's retireve more information about Lithium Nickel Oxide from Wikidata and PubChem"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nAAC5bo8FLD6",
+        "outputId": "7bc59e2f-2892-4163-c1fa-d129b96f3433"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The PubChem ID for a LithiumNickelOxide cell: 138395181\n"
+          ]
+        }
+      ],
       "source": [
         "# Query the Wikidata knowledge graph for more information\n",
         "wikidata_endpoint = \"https://query.wikidata.org/sparql\"\n",
@@ -406,57 +420,22 @@
         "\n",
         "else:\n",
         "    print(\"None found.\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "nAAC5bo8FLD6",
-        "outputId": "7bc59e2f-2892-4163-c1fa-d129b96f3433"
-      },
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The PubChem ID for a LithiumNickelOxide cell: 138395181\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def get_pubchem_compound_data(cid):\n",
-        "    base_url = \"https://pubchem.ncbi.nlm.nih.gov/rest/pug\"\n",
-        "    compound_url = f\"{base_url}/compound/cid/{cid}/JSON\"\n",
-        "    response = requests.get(compound_url)\n",
-        "    if response.status_code == 200:\n",
-        "        return response.json()\n",
-        "    else:\n",
-        "        return None\n",
-        "\n",
-        "# Fetch data for the compound with CID 138395181\n",
-        "compound_data = get_pubchem_compound_data(PubChemId)\n",
-        "if compound_data:\n",
-        "    pretty_json = json.dumps(compound_data, indent=4)  # Pretty-print the JSON data\n",
-        "    print(pretty_json)\n",
-        "else:\n",
-        "    print(\"Data not found or error in API request.\")"
-      ],
+      "execution_count": 54,
       "metadata": {
-        "id": "T1qUAeCDVNq3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "T1qUAeCDVNq3",
         "outputId": "9fabdf0b-adda-4d94-e85c-067efea39029"
       },
-      "execution_count": 54,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{\n",
             "    \"PC_Compounds\": [\n",
@@ -844,7 +823,39 @@
             "}\n"
           ]
         }
+      ],
+      "source": [
+        "def get_pubchem_compound_data(cid):\n",
+        "    base_url = \"https://pubchem.ncbi.nlm.nih.gov/rest/pug\"\n",
+        "    compound_url = f\"{base_url}/compound/cid/{cid}/JSON\"\n",
+        "    response = requests.get(compound_url)\n",
+        "    if response.status_code == 200:\n",
+        "        return response.json()\n",
+        "    else:\n",
+        "        return None\n",
+        "\n",
+        "# Fetch data for the compound with CID 138395181\n",
+        "compound_data = get_pubchem_compound_data(PubChemId)\n",
+        "if compound_data:\n",
+        "    pretty_json = json.dumps(compound_data, indent=4)  # Pretty-print the JSON data\n",
+        "    print(pretty_json)\n",
+        "else:\n",
+        "    print(\"Data not found or error in API request.\")"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
