--- a/sphinx/example_person_jsonld_nb.ipynb
+++ b/sphinx/example_person_jsonld_nb.ipynb
@@ -10,7 +10,9 @@
         "\n",
         "In this notebook, we will explore the principles of JSON-LD using the example of a person. JSON-LD stands for \"JSON for Linking Data\" and it provides a method to enrich your JSON data with semantics.\n",
         "\n",
-        "An operational version of this notebook can be accessed [here](https://colab.research.google.com/drive/14XqRJPWs07RUQgZmDZEu3yb2m1xGvxEQ?usp=sharing)."
+        "An operational version of this notebook can be accessed [here](https://colab.research.google.com/drive/14XqRJPWs07RUQgZmDZEu3yb2m1xGvxEQ?usp=sharing).\n",
+        "\n",
+        "Note, the `pip install` statements are to be run in a shell/terminal."
       ]
     },
     {
@@ -21,7 +23,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y-aalpcNb223",
-        "outputId": "565a219c-1d10-4b55-fd75-a1fcb2257022"
+        "outputId": "565a219c-1d10-4b55-fd75-a1fcb2257022",
+        "vscode": {
+          "languageId": "shellscript"
+        }
       },
       "outputs": [
         {
@@ -48,8 +53,8 @@
       ],
       "source": [
         "# Install the required library for JSON schema validation\n",
-        "!pip install jsonschema\n",
-        "!pip install rdflib"
+        "pip install jsonschema\n",
+        "pip install rdflib"
       ]
     },
     {
